refactor: springboot升级到4.0.0，相关依赖跟随升级，其他部分库升级到最高版本，解决整体构建的问题